# garland_controller

electronic/: .gitignore  garland_controller.kicad_pcb  garland_controller.kicad_pro  garland_controller.kicad_sch
electronic/output/: garland_controller-B_Cu.gbl  garland_controller-B_Mask.gbs  garland_controller-B_Paste.gbp  garland_controller-B_Silkscreen.gbo  garland_controller-Edge_Cuts.gm1  garland_controller-F_Cu.gtl  garland_controller-F_Mask.gts  garland_controller-F_Paste.gtp  garland_controller-F_Silkscreen.gto  garland_controller-NPTH-drl_map.gbr  garland_controller-NPTH.drl  garland_controller-PTH-drl_map.gbr  garland_controller-PTH.drl  garland_controller.step
enclosure/openscad/: box.scad
firmware/: Cargo.toml  Makefile
firmware/src/: adc_rand_seed.rs  bsp.rs  garland.rs  lib.rs  main.rs
