[package]
name = "garland"
version = "0.1.0"
authors = ["yuri volkov"]
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
embedded-hal = "1.0.0"
heapless = "0.8.0"
itertools = {version = "0.14.0", default-features = false}
nb = "1.1.0"
panic-rtt-target = {version = "0.2.0"}
rtic = {version = "2.1.2", features = ["thumbv7-backend"]}
rtic-monotonics = {version = "2.0.3", features = ["cortex-m-systick"]}
rtic-sync = "1.3.2"
rtt-target = "0.6.1"
smart-leds = "0.3.0"
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt", "medium"]}
tinyrand = "0.5.0"
ws2812-blocking-spi = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.1"


# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"

